bug: ensure ir editor never wrap

--- a/src/pages/Home/components/IrEditor/IrEditor.module.scss
+++ b/src/pages/Home/components/IrEditor/IrEditor.module.scss
@@ -64,7 +64,7 @@
     border: 0;
     resize: none;
     outline: 0;
-    word-wrap: normal;
+    white-space: nowrap;
     overflow-y: hidden;
     background-color: transparent;
 }
